Add header elements logo text and list

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header">
+        RoadFlex
+        <ul>
+            <li>Home</li>
+            <li>Cars</li>
+            <li>Contact</li>
+            <li>About</li>
+        </ul>
+    </div>
 </body>
 </html>
