--- a/index.html
+++ b/index.html
@@ -16,5 +16,24 @@
             <li>About</li>
         </ul>
     </div>
+
+    <div class="hero-section">
+    </div>
+
+    <div class="info-section">
+
+    </div>
+    
+    <div class="quote-section">
+
+    </div>
+
+    <div class="action-section">
+
+    </div>
+
+    <div class="footer">
+        
+    </div>
 </body>
 </html>
