--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     </div>
 
     <div class="hero-section">
+        <div class="hero-card">
+            Luxury and cheap is what we can give you
+            <p>Looking to rent a special car, and for the right price? We got you covered!</p>
+            <button>Rent now</button>
+        </div>
+        <img src="./assets/images/pexels-pixabay-326259.jpg" width="600px"/>
     </div>
 
     <div class="info-section">
@@ -33,7 +39,7 @@
     </div>
 
     <div class="footer">
-        
+
     </div>
 </body>
 </html>
