--- a/index.html
+++ b/index.html
@@ -21,13 +21,35 @@
         <div class="hero-card">
             Luxury and cheap is what we can give you
             <p>Looking to rent a special car, and for the right price? We got you covered!</p>
-            <button>Rent now</button>
+            <button class="button">Rent now</button>
         </div>
-        <img src="./assets/images/pexels-pixabay-326259.jpg" width="600px"/>
+        <img src="./assets/images/pexels-pixabay-326259.jpg" width="600px">
     </div>
 
     <div class="info-section">
-
+        What we do...
+        <div class="card">
+            <img src="./assets/images/pexels-negativespace-97075.jpg" width="300px">
+            <p>Get the keys the same day you make your order. No need to wait for the car you rent.</p>
+        </div>
+        <div class="card">
+            <img src="./assets/images/pexels-iamloe-752615.jpg" width="300px">
+            <p>An exclusive line of cars, just for you. Not to mention, for an affordable price too!</p>
+        </div>
+        <div class="card">
+            <img src="./assets/images/pexels-a2pro-3422964.jpg" width="300px">
+            <p>Too far to reach us? Do not worry, we will bring it to you!</p>
+        </div>
+        <div class="card">
+            <img src="./assets/images/pexels-pashal-337909.jpg" width="300px">
+            <p>Need a special specific car for a special event? We can make it happen.</p>
+        </div>
+        <div class="card">
+            <img src="./assets/images/pexels-radu-daniel-mrd-1938968-13002802.jpg" width="300px">
+            Wedding Cars...
+            <p>Happy moments need happy rides... <br> Get the right car for your special day, <br> and make it an everlasting memory.</p>
+            <button class="button">Contact us</button>
+        </div>
     </div>
     
     <div class="quote-section">
