Add image and quote elements to quote section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,16 @@
     </div>
     
     <div class="quote-section">
-
+        <figure class="quote">
+            <img src="./assets/images/jeremy.png" width="250">
+            <blockquote>I was looking for a rare Ferrari, 
+                and I already had planned for other car options, just in case. 
+                They surprised me with not only the car I was looking for, 
+                but the exact color and specifications I wanted! 
+                best rental I have ever dealed with, 
+                not to mention the amazing customer service.</blockquote>
+                <figcaption>&mdash;<cite> Jeremy Clarkson</cite></figcaption>
+        </figure>
     </div>
 
     <div class="action-section">
