--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     </div>
 
     <div class="action-section">
-
+        What are you waiting for?
+        <p>Make the call, and exprience first hand what it feels like to drive luxury.</p>
+        <button class="button">Call us</button>
     </div>
 
     <div class="footer">
