--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
 
     <div class="footer">
-
+        Copyright © 2025 <img src="./assets/images/github-mark.png" width="20px"> <a href="https://github.com/1evity">developed with love by 1evity</a>
     </div>
 </body>
 </html>
