Add special offer content inside a container

--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
                 <p>Need a special specific car for a special event? We can make it happen.</p>
             </div>
         </div>
-        <div class="card">
+        <div class="special">
             <img src="./assets/images/pexels-radu-daniel-mrd-1938968-13002802.jpg" width="300px">
-            Wedding Cars...
-            <p>Happy moments need happy rides... <br> Get the right car for your special day, <br> and make it an everlasting memory.</p>
-            <button class="button">Contact us</button>
+            <div class="special-content">
+                Wedding Cars...
+                <p>Happy moments need happy rides... <br> Get the right car for your special day, <br> and make it an everlasting memory.</p>
+                <button class="button">Contact us</button>
+            </div>
         </div>
     </div>
     
