Add action section elements to container

--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
     </div>
 
     <div class="action-section">
-        What are you waiting for?
-        <p>Make the call, and exprience first hand what it feels like to drive luxury.</p>
-        <button class="button">Call us</button>
+        <div class="card">
+            What are you waiting for?
+            <p>Make the call, and exprience first hand what it feels like to drive luxury.</p>
+            <button class="button">Call us</button>
+        </div>
     </div>
 
     <div class="footer">
