Add action card text to container

--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
 
     <div class="action-section">
         <div class="card">
-            What are you waiting for?
-            <p>Make the call, and exprience first hand what it feels like to drive luxury.</p>
+            <div class="text">
+                What are you waiting for?
+                <p>Make the call, and exprience first hand what it feels like to drive luxury.</p>
+            </div>
             <button class="button">Call us</button>
         </div>
     </div>
