Add flex to action section and add inline styling for paragraph

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="action-section">
         <div class="text">
             What are you waiting for?
-            <p>Make the call, and exprience first hand what it feels like to drive luxury.</p>
+            <p style="font-size: 16px; font-weight: 400;">Make the call, and exprience first hand what it feels like to drive luxury.</p>
         </div>
         <button class="button">Call us</button>
     </div>
