--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="action-section">
         <div class="text">
-            What are you waiting for?
+            <p>What are you waiting for?</p>
             <p style="font-size: 16px; font-weight: 400;">Make the call, and exprience first hand what it feels like to drive luxury.</p>
         </div>
         <button class="button">Call us</button>
