Change some text in index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="hero-section">
         <div class="hero-card">
             Luxury and cheap is what we can give you
-            <p>Looking to rent a special car, and for the right price? We got you covered!</p>
+            <p>Looking to rent a special car? and for the right price? We got you covered!</p>
             <button class="button">Rent now</button>
         </div>
         <img src="./assets/images/pexels-pixabay-326259.jpg" width="500px">
@@ -35,7 +35,7 @@
             </div>
             <div class="card">
                 <img src="./assets/images/pexels-iamloe-752615.jpg">
-                <p>An exclusive line of cars, just for you. Not to mention, for an affordable price too!</p>
+                <p>An exclusive line of cars, just for you. Not to mention, for an affordable price!</p>
             </div>
             <div class="card">
                 <img src="./assets/images/pexels-a2pro-3422964.jpg">
@@ -49,7 +49,7 @@
         <div class="special">
             <img src="./assets/images/pexels-radu-daniel-mrd-1938968-13002802.jpg" height="500px">
             <div class="special-content">
-                Wedding Cars...
+                Wedding Car Services
                 <p>Happy moments need happy rides... <br> Get the right car for your special day, <br> and make it an everlasting memory.</p>
                 <button class="button">Contact us</button>
             </div>
@@ -78,7 +78,7 @@
     </div>
 
     <div class="footer">
-        Copyright © 2025 <img src="./assets/images/github-mark.png" width="20px"> <a href="https://github.com/1evity">developed with love by 1evity</a>
+        Copyright © 2025 <img src="./assets/images/github-mark.png" width="20px"> <a href="https://github.com/1evity">developed by 1evity</a>
     </div>
 </body>
 </html>
