Fix: html document structure

--- a/index.html
+++ b/index.html
@@ -1,84 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <title>RoadFlex</title>
 </head>
+
 <body>
-    <div class="header">
-        RoadFlex
-        <ul>
-            <li>Home</li>
-            <li>Cars</li>
-            <li>Contact</li>
-            <li>About</li>
-        </ul>
-    </div>
+    <main>
+        <div class="header">
+            RoadFlex
+            <ul>
+                <li>Home</li>
+                <li>Cars</li>
+                <li>Contact</li>
+                <li>About</li>
+            </ul>
+        </div>
 
-    <div class="hero-section">
-        <div class="hero-card">
-            Luxury and cheap is what we can give you
-            <p>Looking to rent a special car? and for the right price? We got you covered!</p>
-            <button class="button">Rent now</button>
+        <div class="hero-section">
+            <div class="hero-card">
+                Luxury and cheap is what we can give you
+                <p>Looking to rent a special car? and for the right price? We got you covered!</p>
+                <button class="button">Rent now</button>
+            </div>
+            <img src="./assets/images/pexels-pixabay-326259.jpg" width="500px">
         </div>
-        <img src="./assets/images/pexels-pixabay-326259.jpg" width="500px">
-    </div>
 
-    <div class="info-section">
-        What we do...
-        <div class="cards">
-            <div class="card">
-                <img src="./assets/images/pexels-negativespace-97075.jpg">
-                <p>Get the keys the same day you make your order. No need to wait for the car you rent.</p>
+        <div class="info-section">
+            What we do...
+            <div class="cards">
+                <div class="card">
+                    <img src="./assets/images/pexels-negativespace-97075.jpg">
+                    <p>Get the keys the same day you make your order. No need to wait for the car you rent.</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/pexels-iamloe-752615.jpg">
+                    <p>An exclusive line of cars, just for you. Not to mention, for an affordable price!</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/pexels-a2pro-3422964.jpg">
+                    <p>Too far to reach us? Do not worry, we will bring it to you!</p>
+                </div>
+                <div class="card">
+                    <img src="./assets/images/pexels-pashal-337909.jpg">
+                    <p>Need a special specific car for a special event? We can make it happen.</p>
+                </div>
             </div>
-            <div class="card">
-                <img src="./assets/images/pexels-iamloe-752615.jpg">
-                <p>An exclusive line of cars, just for you. Not to mention, for an affordable price!</p>
-            </div>
-            <div class="card">
-                <img src="./assets/images/pexels-a2pro-3422964.jpg">
-                <p>Too far to reach us? Do not worry, we will bring it to you!</p>
-            </div>
-            <div class="card">
-                <img src="./assets/images/pexels-pashal-337909.jpg">
-                <p>Need a special specific car for a special event? We can make it happen.</p>
+            <div class="special">
+                <img src="./assets/images/pexels-radu-daniel-mrd-1938968-13002802.jpg" height="500px">
+                <div class="special-content">
+                    Wedding Car Services
+                    <p>Happy moments need happy rides... <br> Get the right car for your special day, <br> and make it
+                        an everlasting memory.</p>
+                    <button class="button">Contact us</button>
+                </div>
             </div>
         </div>
-        <div class="special">
-            <img src="./assets/images/pexels-radu-daniel-mrd-1938968-13002802.jpg" height="500px">
-            <div class="special-content">
-                Wedding Car Services
-                <p>Happy moments need happy rides... <br> Get the right car for your special day, <br> and make it an everlasting memory.</p>
-                <button class="button">Contact us</button>
-            </div>
-        </div>
-    </div>
-    
-    <div class="quote-section">
-        <img src="./assets/images/jeremy.png" width="250">
-        <figure class="quote">
-            <blockquote>I was looking for a rare Ferrari, 
-                and I already had planned for other car options, just in case. 
-                They surprised me with not only the car I was looking for, 
-                but the exact color and specifications I wanted! 
-                best rental I have ever dealed with, 
-                not to mention the amazing customer service.</blockquote>
+
+        <div class="quote-section">
+            <img src="./assets/images/jeremy.png" width="250">
+            <figure class="quote">
+                <blockquote>I was looking for a rare Ferrari,
+                    and I already had planned for other car options, just in case.
+                    They surprised me with not only the car I was looking for,
+                    but the exact color and specifications I wanted!
+                    Best rental I have ever dealed with!
+                    Not to mention the amazing customer service.</blockquote>
                 <figcaption>&mdash;<cite> Jeremy Clarkson</cite></figcaption>
-        </figure>
-    </div>
-
-    <div class="action-section">
-        <div class="text">
-            <p>What are you waiting for?</p>
-            <p style="font-size: 16px; font-weight: 400;">Make the call, and exprience first hand what it feels like to drive luxury.</p>
+            </figure>
         </div>
-        <button class="button">Call us</button>
-    </div>
 
-    <div class="footer">
-        Copyright © 2025 <img src="./assets/images/github-mark.png" width="35px"> <a href="https://github.com/1evity">developed by 1evity</a>
-    </div>
+        <div class="action-section">
+            <div class="text">
+                <p>What are you waiting for?</p>
+                <p style="font-size: 16px; font-weight: 400;">Make the call, and exprience first hand what it feels like
+                    to drive luxury.</p>
+            </div>
+            <button class="button">Call us</button>
+        </div>
+
+    </main>
+    <footer>
+        <div class="footer">
+            Copyright © 2025 <img src="./assets/images/github-mark.png" width="35px"> <a
+                href="https://github.com/1evity">developed by 1evity</a>
+        </div>
+    </footer>
 </body>
+
 </html>
