--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="We provide renting services for a wide range of exceptional luxury cars...">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <title>RoadFlex</title>
 </head>
